# momiji-lang

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  implementation-plan.md
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
compiler/src/check/: cache.rs  deps.rs  mod.rs
compiler/src/codegen/: cranelift.rs
compiler/src/errors/: mod.rs
compiler/src/lexer/: mod.rs  scanner.rs  token.rs
compiler/src/parser/: ast.rs  parser.rs
compiler/src/runtime/: interpreter.rs
compiler/src/sem/: ir.rs  lower.rs  mod.rs
compiler/src/types/: checker.rs  mod.rs  types.rs
compiler/tests/: backend_parity.rs  cli_build.rs  cli_check.rs  cli_run_cranelift.rs  cli_run_interp.rs
compiler/tests/common/: mod.rs
compiler/tests/programs/: arithmetic.mj  arrays_index.mj  branch_returns_ok.mj  comparisons.mj  conditionals.mj  float_array_codegen_fail.mj  for_loop.mj  function_calls.mj  hello.mj  match_in_function.mj  match_literal.mj  match_string.mj  match_type_error.mj  match_variable.mj  missing_return.mj  missing_return_branch.mj  ranges.mj  reassign_ok.mj  reassign_print.mj  string_index_codegen_fail.mj  struct_basic.mj  struct_in_function.mj  struct_type_error.mj  struct_undefined_field.mj  type_mismatch.mj  undefined_function.mj  undefined_var.mj  unreachable.mj  unreachable_after_if_returns.mj  while_loop.mj  wrong_arity.mj
compiler/tests/snapshots/: cli_build__build_rejects_interp_backend.snap  cli_check__check_match_type_error.snap  cli_check__check_missing_return.snap  cli_check__check_missing_return_branch.snap  cli_check__check_reassign_is_valid.snap  (+22 more)
(+7 files in other folders)
