[package]
name = "momiji"
version = "0.1.0"
edition = "2021"
description = "The Momiji programming language compiler"
license = "MIT"

[[bin]]
name = "momiji"
path = "src/main.rs"

[dependencies]
# Code generation with Cranelift (no external LLVM needed)
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"

# Parallel iteration
rayon = "1"

# CLI and error handling
clap = { version = "4", features = ["derive"] }
thiserror = "1"
miette = { version = "7", features = ["fancy"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
